--- a/Requirements Specification document/Requirements Specification document.tex
+++ b/Requirements Specification document/Requirements Specification document.tex
@@ -139,19 +139,19 @@ and the back-end diagram to a more technical view.
 \clearpage
 The following actors exists in the final system:\\
 \medskip
-\begin{tabularx}{\textwidth}{|m{3cm}|m{3cm}|m{10cm}|}
+\begin{tabularx}{\textwidth}{|m{4cm}|m{4cm}|m{8cm}|}
 	\hline
 	\textbf{Actor} 
 	&\textbf{Symbol}
 	&\textbf{Description}\\
 	\hline
-	End user & {\color{red} TODO: include actor image} & The End user interacts with the web interface of the system and does not need any information about the technical implementation\\
+	End user & \includegraphics[width=60px, height=75px]{"UML Files/enduser".png} & The End user interacts with the web interface of the system and does not need any information about the technical implementation\\
 	\hline
-	Webclient & {\color{red} TODO: include actor image} & The Webclient provides the API access on simple abstraction layer to provide an easy algorithm execution\\
+	Webclient & \includegraphics[width=100px]{"UML Files/webclient".png} & The Webclient provides the API access on simple abstraction layer to provide an easy algorithm execution\\
 	\hline
-	Event Label Refining Front-end & {\color{red} TODO: include actor image} & The Event Label Refining Front-end is the Webclient which is delivered with the project \\
+	Event Label Refining Front-end & \includegraphics[width=100px]{"UML Files/front-end".png} & The Event Label Refining Front-end is the Webclient which is delivered with the project \\
 	\hline
-	Event Label Refining Back-end & {\color{red} TODO: include actor image} & The Event Label Refining Backend-end is responsible for label refining algorithm. It provides access via an API \\
+	Event Label Refining Back-end & \includegraphics[width=100px]{"UML Files/back-end".png} & The Event Label Refining Backend-end is responsible for label refining algorithm. It provides access via an API \\
 	\hline
 \end{tabularx}
 
