--- a/Requirements Specification document/Requirements Specification document.tex
+++ b/Requirements Specification document/Requirements Specification document.tex
@@ -158,19 +158,27 @@ The following actors exists in the final system:\\
 \subsection{Functional and Data Requirements}
 The following requirements result from the use case analysis:\\
 \medskip
-\includegraphics[scale=0.6]{Req1.png}
+\includegraphics[scale=0.6]{reqq1.png}
 
-\includegraphics[scale=0.6]{Req2.png}
+\includegraphics[scale=0.6]{reqq2.png}
 
-\includegraphics[scale=0.6]{Req3.png}
+\includegraphics[scale=0.6]{reqq3.png}
 
-\includegraphics[scale=0.6]{Req4.png}
+\includegraphics[scale=0.6]{reqq4.png}
 
-\includegraphics[scale=0.6]{Req5.png}
+\includegraphics[scale=0.6]{reqq5.png}
 
-\includegraphics[scale=0.6]{Req6.png}
+\includegraphics[scale=0.6]{reqq6.png}
 
-\includegraphics[scale=0.6]{Req7.png}
+\includegraphics[scale=0.6]{reqq7.png}
+
+\includegraphics[scale=0.6]{reqq8.png}
+
+\includegraphics[scale=0.6]{reqq9.png}
+
+\includegraphics[scale=0.6]{reqq10.png}
+
+\includegraphics[scale=0.6]{reqq11.png}
 
 
 
@@ -221,7 +229,7 @@ This might be helpful in the designing steps of our algorithm.
 
 We will use a code written in Java to automatically generate events logs which we will then use as small tests for our code.
 
-\textcolor{red}{@juan: Where did you get the java code you showed us once?}
+%\textcolor{red}{@juan: Where did you get the java code you showed us once?}
 
 \subsection{New Problems}
 The Label Refinement algorithm intends to give the user an alternative event log on which process discovery algorithms can be applied.
