screen flow and Application Control added

--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -112,13 +112,22 @@
 
 \section{User Interface Design}
 \subsection{Application Control}
-\subsection{Screen 1}
+
+In the project, we will implement a web service. The web client will have a rather plain design that should focus on the main activities the service should provide, which are uploading event logs in csv or XES format, setting the threshold for the label refinement algorithm and download the refined log after the algorithm is finished. There will be buttons used to upload the file, apply the algorithm and download the refined event log. Moreover, the screens will have short explanations telling the user what to do (if not self-explanatory). For setting the thresholds, two boxes will be provided that include the default thresholds, but new values can be entered by the user. A draft of each of the main screen can be found in the next section, section 6.2.
+
+\subsection{The Screens}
+
+The main screens will be visualized in the following subsections. In these screens include the main functionalities, which are described in the former section. The following diagram will show the flow of control through the screens.  
+
+\includegraphics[scale=0.7]{ScreenFlow.png}
+
+\subsubsection{Screen 1}
 
 \includegraphics[scale=0.8]{InterfaceMockup1.png}
 
 
 The first screen visible to the user will show a description saying that an event log in csv of XES format should be uploaded. Moreover, a button "Upload File" is visible. By using this button, the user will continue to Screen 2. At the end of the page, there will be a link called "User Documentation". By clicking on this link, the User Documentation will be downloaded in pdf format.
-\subsection{Screen 2}
+\subsubsection{Screen 2}
 
 \includegraphics[scale=0.8]{InterfaceMockup2.png}
 
@@ -126,9 +135,6 @@ In the second screen visible to the user, the user can enter the file direction 
 
 After using one of this alternatives, he can use the "Upload" button to upload the file with the given directory. In case this file is an event log, i.e., the data contains at least the attributes "id", "time stamp" and "activity name", and has either csv or XES format, the user will continue to Screen 3.1. If one of these conditions is not satisfied, he will continue to Screen 3.2. 
 
-\subsection{Screen 3}
-
-Depending on whether the file the user uploaded meets the constraints, either Screen 3.1 or Screen 3.2 will be shown.
 
 \subsubsection{Screen 3.1}
 \includegraphics[scale=0.8]{InterfaceMockup3-1.png}
@@ -141,7 +147,7 @@ This screen appears if the file uploaded by the user meets the requirements. In 
 This screen appears if the upload was not successful because the file did not meet the assumptions. If the file does not have the right format, the user can click on the button "Upload new File" to return to Screen 2 and upload a file that meets the constraints.
 
 
-\subsection{Screen 4}
+\subsubsection{Screen 4}
 \includegraphics[scale=0.8]{InterfaceMockup4.png}
 
 This Screen will be shown after finishing the algorithm. The user can now download the refined log using the corresponding button. After this step, the user is done and can exit the page, but if he also wants to apply the algorithm to another event log or to the same event log using different thresholds, he can use the corresponding buttons and will be redirected to Screen 2 or Screen 3.1 respectively.
