Add File Storage  to System Architecture

--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -100,13 +100,14 @@
 \section{Architectural Strategies}
 
 \section{System Architecture}
-\includegraphics[scale=0.4]{UML_Architecture/Architecture_Overview.png}
+\includegraphics[scale=0.4]{"UML_Architecture/Architecture Overview".png}
 
 \subsection{Client Machine}
 \subsection{Front-end}
 \subsection{Refining Label API}
+\subsection{File Store}
 \subsection{Refining Event Labels}
-\subsection{Library}
+\subsection{Event Log Converter}
 
 \section{Policies and Tactics}
 
